# libdiurna

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-debug.yml  codeql-analysis.yml  package-release.yml
cmake-modules/: LeadingZero.cmake
inc/: diurna.h  diurna_internal.h
man-pages/: diurna_cfg_appender_register.3  diurna_cfg_appender_unregister_all.3  diurna_cfg_loglevel_set.3  diurna_debug.3  diurna_destroy.3  diurna_error.3  diurna_info.3  diurna_initialize.3  diurna_initialize_ex.3  diurna_version_as_int.3  diurna_version_as_str.3  diurna_warn.3
res/: package-description.txt  version.h.template
src/: diurna.h  diurna_appender_console.c  diurna_destroy.c  diurna_get_version_as_int.c  diurna_get_version_as_str.c  diurna_initialize.c  diurna_log_consumer_thread.c  diurna_logger.c  internal.h
src/appender/: diurna_appender_console.c  diurna_appender_console_create.c  diurna_appender_console_write.c  diurna_appender_file_create.c  diurna_appender_file_destroy.c  diurna_appender_file_write.c  diurna_appender_syslog.c  diurna_appender_syslog_create.c  diurna_appender_syslog_write.c
src/core/: diurna_cfg_appender_register.c  diurna_cfg_appender_unregister_all.c  diurna_cfg_loglevel_set.c  diurna_destroy.c  diurna_initialize.c  diurna_initialize_ex.c  diurna_log_consumer_thread.c  diurna_logger.c  diurna_version_as_int.c  diurna_version_as_str.c
src/queue/: diurna_queue.h  diurna_queue_dequeue.c  diurna_queue_destroy.c  diurna_queue_initialize.c  diurna_queue_queue.c
src/windows/: win_nanosleep.c
test/: test_main.c
